2006-06-13  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/Game.cs: Fix ticket #8, use ToLower() to
	check for the SC install.exe filename.

2006-06-13  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/SmackerPlayer.cs: mostly adapt daxxar's
	SmkTest player here.  Remove the (missing) ffmpeg glu library
	dependency.

	* SCSharp/SCSharp.UI/Cinematic.cs: move the frame scaling stuff
	here.

	* SCSharp/SCSharp.UI/Painter.cs: rewrite things such that we only
	have one Painter (accessed via Painter.Instance).  Also, now we
	only paint if there's a dirty rectangle.  We rely on the various
	UI elements to tell us when a region on the screen is invalid and
	needs redrawing.  This isn't the final iteration, but it's a lot
	closer to the "right" solution.

	* SCSharp/SCSharp.Util/Util.cs: add MakeTag from daxxar's SmkLib.
	it should probably live in that code instead of here, but leave it
	here for now.

2006-06-08  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/GameScreen.cs: add rendering of wireframe,
	some of the text strings, and (if you click on the terran command
	center) the cmd icons.  Cmd icons need to be in a table in the
	.exe, I think (unless someone can find where they exist in the
	.mpq file).  The colors in the rendered text/icons are wrong at
	the moment.

	* SCSharp/SCSharp.UI/Race.cs: reorder this to match some strings
	in stat_txt.tbl.

	* SCSharp/SCSharp.Util/Util.cs: reorder RaceChar and RaceCharLower to match Race.cs.

	* SCSharp/SCSharp.UI/Unit.cs (UnitId): add a new accessor.

2006-06-04  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/SpriteManager.cs: when we're executing inside
	Tick, don't modify the sprite list.  store off pending
	removes/adds and process them after we're done with the tick
	handler.  Should fix ticket #4.

2006-05-30  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/Game.cs (.ctor): guard against having
	multiple broodat.mpq/stardat.mpq files in a directory (since we